--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <style>
         body{
             width: 100%;
-            
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
         }
     </style>
 
@@ -50,6 +50,96 @@
         </article>
 
     </header>
+
+    <main>
+
+        <article class="fundo-bunners">
+            <img src="" alt="" img="bunner-img">
+        </article>
+
+        <article class="fundo-produtos">
+
+            <div class="fundo-config-produtos">
+
+                <div class="fundo-infor-produto">
+                    <p id="texto-infor-produto">Promoções</p>
+                </div>
+
+                <div class="fundo-setaspromoçao">
+                    <i class="fa-solid fa-arrow-left" id="seta-left-promoçao"></i>
+                    <i class="fa-solid fa-arrow-right" id="seta-right-promoçao"></i>
+                </div>
+            </div>
+
+            <div class="fundo-blocoprodutos">
+
+                <div class="bloco-produtos">
+                    <div class="fundo-imgprodutos">
+                        <img src="https://i.postimg.cc/jjWkM6Kn/TENIS.avif" alt="" id="img-produto">
+                    </div>
+                    <div class="fundo-inforprodutos">
+                        <p id="titulo-produto">Tenis nike zero 1</p>
+                        <p id="categoria-produto">Nike</p>
+
+                        <div class="fundo-preçoavaliaçao">
+                            <p id="preço-produto">R$ 120,00</p>
+                            <p id="avaliaçao-produto">8,9</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bloco-produtos">
+                    <div class="fundo-imgprodutos">
+                        <img src="https://i.postimg.cc/jjWkM6Kn/TENIS.avif" alt="" id="img-produto">
+                    </div>
+                    <div class="fundo-inforprodutos">
+                        <p id="titulo-produto"></p>
+                        <p id="categoria-produto"></p>
+
+                        <div class="fundo-preçoavaliaçao">
+                            <p id="preço-produto">R$ 120,00</p>
+                            <p id="avaliaçao-produto">8,9</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bloco-produtos">
+                    <div class="fundo-imgprodutos">
+                        <img src="https://i.postimg.cc/jjWkM6Kn/TENIS.avif" alt="" id="img-produto">
+                    </div>
+                    <div class="fundo-inforprodutos">
+                        <p id="titulo-produto"></p>
+                        <p id="categoria-produto"></p>
+
+                        <div class="fundo-preçoavaliaçao">
+                            <p id="preço-produto">R$ 120,00</p>
+                            <p id="avaliaçao-produto">8,9</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bloco-produtos">
+                    <div class="fundo-imgprodutos">
+                        <img src="https://i.postimg.cc/jjWkM6Kn/TENIS.avif" alt="" id="img-produto">
+                    </div>
+                    <div class="fundo-inforprodutos">
+                        <p id="titulo-produto"></p>
+                        <p id="categoria-produto"></p>
+
+                        <div class="fundo-preçoavaliaçao">
+                            <p id="preço-produto">R$ 120,00</p>
+                            <p id="avaliaçao-produto">8,9</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+        </article>
+
+    </main>
 
  
 
