--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                         <img src="https://i.postimg.cc/jjWkM6Kn/TENIS.avif" alt="" id="img-produto">
                     </div>
                     <div class="fundo-inforprodutos">
-                        <p id="titulo-produto"></p>
-                        <p id="categoria-produto"></p>
+                        <p id="titulo-produto">Tenis nike zero 1</p>
+                        <p id="categoria-produto">Nike</p>
 
                         <div class="fundo-preçoavaliaçao">
                             <p id="preço-produto">R$ 120,00</p>
@@ -108,8 +108,8 @@
                         <img src="https://i.postimg.cc/jjWkM6Kn/TENIS.avif" alt="" id="img-produto">
                     </div>
                     <div class="fundo-inforprodutos">
-                        <p id="titulo-produto"></p>
-                        <p id="categoria-produto"></p>
+                        <p id="titulo-produto">Tenis nike zero 1</p>
+                        <p id="categoria-produto">Nike</p>
 
                         <div class="fundo-preçoavaliaçao">
                             <p id="preço-produto">R$ 120,00</p>
@@ -123,8 +123,8 @@
                         <img src="https://i.postimg.cc/jjWkM6Kn/TENIS.avif" alt="" id="img-produto">
                     </div>
                     <div class="fundo-inforprodutos">
-                        <p id="titulo-produto"></p>
-                        <p id="categoria-produto"></p>
+                        <p id="titulo-produto">Tenis nike zero 1</p>
+                        <p id="categoria-produto">Nike</p>
 
                         <div class="fundo-preçoavaliaçao">
                             <p id="preço-produto">R$ 120,00</p>
